--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,8 +1,18 @@
 #root {
+  text-align: center;
+}
+
+.layout-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.layout-container main {
+  flex-grow: 1;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
 }
 
 .logo {
